--- a/BT-GK1/Halloween Card/link/booth.css
+++ b/BT-GK1/Halloween Card/link/booth.css
@@ -1,13 +1,13 @@
 body {
     width: 100%;
     height: 100vh;
-    background: url(/img/background-5.jpg) no-repeat center center fixed;
+    background: url(img/background-5.jpg) no-repeat center center fixed;
     background-size: cover;
     box-sizing: border-box;
 }
 @font-face {
     font-family: abc;
-    src: url(/font/Buffied-GlqZ.ttf);
+    src: url(font/Buffied-GlqZ.ttf);
 }
 
 .row .card {
