--- a/BT-GK1/Halloween Card/link/form.css
+++ b/BT-GK1/Halloween Card/link/form.css
@@ -5,7 +5,7 @@
 body {
     width: 100%;
     height: 80vh;
-    background: url(/img/background-3.jpg) no-repeat center center fixed;
+    background: url(img/background-3.jpg) no-repeat center center fixed;
     background-size: cover;
     box-sizing: border-box;
 }
